--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Tubes</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Tubes</title>
+    </head>
 
-<style>
-    @import url("css/landscape.css");
-    @import url("css/tube.css");
-</style>
-<body>
-
-<div class="skyBlock" id="skyBlockId">
-    <div id="grass"></div>
-    <div id="tree"></div>
-</div>
-<div class="groundBlock" id="groundBlockId" >
-</div>
-<script src="src/landscape.js" type="text/javascript"></script>
-<script src="src/game.js" type="text/javascript"></script>
-</body>
+    <style>
+        @import url("css/landscape.css");
+        @import url("css/tube.css");
+    </style>
+    <body>
+        <div class="skyBlock" id="skyBlockId">
+            <div id="grass"></div>
+            <div id="tree"></div>
+        </div>
+        <div class="groundBlock" id="groundBlockId" >
+        </div>
+        <script src="src/landscape.js" type="text/javascript"></script>
+        <script src="src/generator.js" type="text/javascript"></script>
+        <script src="src/game.js" type="text/javascript"></script>
+    </body>
 </html>
