--- a/index.html
+++ b/index.html
@@ -1,23 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Tubes</title>
-    </head>
+	<head>
+		<meta charset="UTF-8">
+		<title>Tubes</title>
+	</head>
 
-    <style>
-        @import url("css/landscape.css");
-        @import url("css/tube.css");
-    </style>
-    <body>
-        <div class="skyBlock" id="skyBlockId">
-            <div id="grass"></div>
-            <div id="tree"></div>
-        </div>
-        <div class="groundBlock" id="groundBlockId" >
-        </div>
-        <script src="src/landscape.js" type="text/javascript"></script>
-        <script src="src/generator.js" type="text/javascript"></script>
-        <script src="src/game.js" type="text/javascript"></script>
-    </body>
+	<style>
+		@import url("css/landscape.css");
+		@import url("css/tube.css");
+		@import url("css/controls.css");
+	</style>
+	<body>
+
+		<div class="skyBlock" id="skyBlockId">
+			<div id="grass"></div>
+			<div id="tree"></div>
+		</div>
+		<div class="groundBlock" id="groundBlockId">
+
+			<div class="menuButton" id="button">
+			</div>
+
+			<div class="menu" id="menuId">
+				<div id="card">
+					<figure class="back" id="backId">
+					</figure>
+					<figure class="front" id="frontId">
+						<a class="menuButtons">New game</a>
+						<a class="menuButtons">Replay</a>
+						<a class="menuButtons">Solve</a>
+						<a class="menuButtons">Easy</a>
+						<a class="menuButtons">Medium</a>
+						<a class="menuButtons">Hard</a>
+					</figure>
+				</div>
+			</div>
+
+		</div>
+
+		<script src="src/landscape.js" type="text/javascript"></script>
+		<script src="src/generator.js" type="text/javascript"></script>
+		<script src="src/game.js" type="text/javascript"></script>
+
+	</body>
 </html>
