--- a/index.html
+++ b/index.html
@@ -43,8 +43,14 @@
 </div>
 
 <div class="chooselevel" id ="chooselevelId" >
-
 </div>
+
+<div class="winDiv" id ="winDivId">Congratulations
+    <a class="winButtons" onclick="newGame()">New game</a>
+    <a class="winButtons" onclick="game.restart()">Replay</a>
+    <a class="winButtons" onclick="action()">Ok</a>
+</div>
+
 
 <script src="src/landscape.js" type="text/javascript"></script>
 <script src="src/generator.js" type="text/javascript"></script>
