--- a/index.html
+++ b/index.html
@@ -3,17 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Tubes</title>
-    <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase.js"></script>
-    <script>
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyAfdSz0qVYgPIc8_tWnreLyoUT9JW34nMY",
-            authDomain: "topgameeu.firebaseapp.com",
-            databaseURL: "https://topgameeu.firebaseio.com",
-            storageBucket: "topgameeu.appspot.com",
-        };
-        firebase.initializeApp(config);
-    </script>
 </head>
 
 <style>
@@ -68,11 +57,15 @@
 </div>
 
 
+<div class="house" id = "houseId"></div>
+<div class="well" id = "wellId"></div>
+
+
+<script src="src/generator.js" type="text/javascript"></script>
+<script src="src/game.js" type="text/javascript"></script>
 <script src="src/landscape.js" type="text/javascript"></script>
 <script src="src/blackbox/jquery.min.js" type="text/javascript"></script>
 <script src="src/blackbox/progress_bar.js" type="text/javascript"></script>
-<script src="src/generator.js" type="text/javascript"></script>
-<script src="src/game.js" type="text/javascript"></script>
 
 
 </body>
