--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div class="house" id = "houseId"></div>
 <div class="well" id = "wellId"></div>
 
-
+<script src="src/utils.js" type="text/javascript"></script>
 <script src="src/generator.js" type="text/javascript"></script>
 <script src="src/game.js" type="text/javascript"></script>
 <script src="src/landscape.js" type="text/javascript"></script>
