--- a/index.html
+++ b/index.html
@@ -13,35 +13,26 @@
 </style>
 <body>
 
-    <table id="leaderBoardId">
-        <caption>Leader board</caption>
-        <tr>
-            <th>User</th>
-            <th>Score</th>
-        </tr>
-    </table>
+<div class="skyBlock" id="skyBlockId">
+    <div id="grass"></div>
+    <div id="tree"></div>
+</div>
+<div class="groundBlock" id="groundBlockId">
 
-    <div class="skyBlock" id="skyBlockId">
-        <div id="grass"></div>
-        <div id="tree"></div>
+    <div class="progressbar" id="progressBarId">
+        <div class="bar"><span></span></div>
     </div>
 
-    <div class="groundBlock" id="groundBlockId">
+    <div class="menuButton" id="button">
+    </div>
 
-        <div class="progressbar" id="progressBarId">
-            <div class="bar"><span></span></div>
-        </div>
-
-        <div class="menuButton" id="button">
-        </div>
-
-        <div class="menu" id="menuId">
-            <div id="card">
-                <figure class="back" id="backId">
-                </figure>
-                <figure class="front" id="frontId">
-                    <a class="menuButtons" id = "0" onclick="newGame()">New game</a>
-                    <a class="menuButtons" id = "1" onclick="game.restart()">Replay</a>
+    <div class="menu" id="menuId">
+        <div id="card">
+            <figure class="back" id="backId">
+            </figure>
+            <figure class="front" id="frontId">
+                <a class="menuButtons" id = "0" onclick="newGame()">New game</a>
+                <a class="menuButtons" id = "1" onclick="game.restart()">Replay</a>
                     <a class="menuButtons" id = "2" onclick="game.solve()">Solve</a>
                     <a class="menuButtons" id = "3" onclick="showHiddenMenu()">Level</a>
                     <div class = "level" id = "levelId">
@@ -50,30 +41,32 @@
                         <a class="menuButtons" id = "3_3" onclick="chooseLevel(17,13)">Hard</a>
                         <a class="menuButtons" id = "3_4" onclick="levelSelectionMenu()">Choose</a>
                     </div>
-                    <a class="menuButtons" id = "4">Results</a>
-                </figure>
-            </div>
+                <a class="menuButtons" id = "4">Results</a>
+            </figure>
         </div>
     </div>
+</div>
 
-    <div class="chooselevel" id ="chooselevelId" >
-    </div>
+<div class="chooselevel" id ="chooselevelId" >
+</div>
 
-    <div class="winDiv" id ="winDivId">Congratulations
-        <a class="winButtons" onclick="newGame()">New game</a>
-        <a class="winButtons" onclick="game.restart()">Replay</a>
-        <a class="winButtons" onclick="action()">Ok</a>
-    </div>
+<div class="winDiv" id ="winDivId"><p></p>
+    <a class="winButtons" onclick="newGame()">New game</a>
+    <a class="winButtons" onclick="game.restart()">Replay</a>
+    <a class="winButtons" onclick="action()">Ok</a>
+</div>
 
-    <div class="house" id = "houseId"></div>
-    <div class="well" id = "wellId"></div>
+<div class="house" id = "houseId"></div>
+<div class="well" id = "wellId"></div>
 
-    <script src="src/utils.js" type="text/javascript"></script>
-    <script src="src/generator.js" type="text/javascript"></script>
-    <script src="src/game.js" type="text/javascript"></script>
-    <script src="src/landscape.js" type="text/javascript"></script>
-    <script src="src/blackbox/jquery.min.js" type="text/javascript"></script>
-    <script src="src/blackbox/progress_bar.js" type="text/javascript"></script>
+<script src="src/utils.js" type="text/javascript"></script>
+<script src="src/generator.js" type="text/javascript"></script>
+<script src="src/game.js" type="text/javascript"></script>
+<script src="src/landscape.js" type="text/javascript"></script>
+<script src="src/blackbox/jquery.min.js" type="text/javascript"></script>
+<script src="src/blackbox/flipScript.js" type="text/javascript"></script>
+<script src="src/blackbox/progress_bar.js" type="text/javascript"></script>
+
 
 </body>
 </html>
