Add firebase interaction

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Tubes</title>
+	<script src="https://www.gstatic.com/firebasejs/3.2.0/firebase.js"></script>
+    <script>
+        var config = {
+            apiKey: "AIzaSyAfdSz0qVYgPIc8_tWnreLyoUT9JW34nMY",
+            authDomain: "topgameeu.firebaseapp.com",
+            databaseURL: "https://topgameeu.firebaseio.com",
+            storageBucket: "topgameeu.appspot.com",
+        };
+        firebase.initializeApp(config);
+    </script>
 </head>
 
 <style>
